last commit front-end

--- a/index.html
+++ b/index.html
@@ -52,6 +52,110 @@
         </div>
       </div>
     </header>
+
+    <section class="section__Container banner__container">
+      <DIV class="banner__card">
+      <p>TRY IT OUT TODAY</p>
+      <h4>MOST POPULAR BURGER</h4>
+    </DIV>
+      <DIV class="banner__card">
+      <p>TRY IT OUT TODAY</p>
+      <h4>MORE FUN <BR> MORE TASTE</h4>
+    </DIV>
+      <DIV class="banner__card">
+      <p>TRY IT OUT TODAY</p>
+      <h4>MOST POPULAR BURGER</h4>
+    </DIV>
+    </section>
+    <section class="section__Container order__container">
+      <h3>ALWAYS TASTEY BURGER</h3>
+      <h2 class="section__header">CHOOSE & ENJOY</h2>
+      <P class="section__description">Lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo similique minus iusto dolorum doloremque numquam ipsa enim. Quos, excepturi alias!
+        ipsum dolor sit amet consectetur adipisicing elit. Quam, incidunt.
+      </P>
+      <div class="order__grid">
+        <div class="order__Card">
+          <img src="assets/order-1.png" alt="burger">
+          <h4>veggie delight burger</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, ad.</p>
+          <button class="btn">ORDER NOW</button>
+        </div>
+        <div class="order__Card">
+          <img src="assets/order-2.png" alt="burger">
+          <h4> BURGER FOR EVERY MOOTH</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, ad.</p>
+          <button class="btn">ORDER NOW</button>
+        </div>
+        <div class="order__Card">
+          <img src="assets/order-3.png" alt="burger">
+          <h4>BBQ BACON BURGER</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, ad.</p>
+          <button class="btn">ORDER NOW</button>
+        </div>
+      </div>
+
+    </section>
+
+    <section class="section__Container event__container">
+      <div class="event__content">
+        <div class="event__image"><img src="assets/event.png" alt="event"></div>
+        <div class="event__detail">
+        <h3>DISCOVER</h3>
+        <h2 class="section__header">UPCOMING EVENTS</h2>
+        <P class="section__description">Lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam laboriosam nostrum, animi aut adipisci voluptatem accusamus sapiente cum debitis reiciendis impedit blanditiis ab facere nemo totam vitae nesciunt sit dolores, consectetur, molestiae rerum vel dolorem natus quo. Nostrum necessitatibus voluptas, repellat dolorum unde eius similique quaerat ipsum voluptates alias esse? ipsum, dolor sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, accusamus?consectetur adipisicing elit. Voluptate, reprehenderit.  </P>
+        
+        
+      </div>
+    </div>
+    </section>
+    <section class="reservation" id="content">
+        <div class="section__Container reservetion__container">
+          <h3>RESERVATION</h3>
+          <h2 class="section__header">BOOK YOURE TABLE</h2>
+          <form action="">
+            <input type="NAME" placeholder="NAME">
+            <input type="EMAIL" placeholder="EMAIL">
+            <input type="DATE" placeholder="DATE">
+            <input type="TIME" placeholder="TIME">
+            <input type="PEOPLE" placeholder="PEOPLE">
+            <button class="btn" type="submit" >FINED TABLE</button>
+          </form>
+        </div>
+        <img src="assets/reservation-bg-1.png" class="reservation-bg-1" alt="reservation">
+        <img src="assets/reservation-bg-2.png" class="reservation-bg-2" alt="reservation">
+    </section>
+<footer class="footer">
+  <div class="section__Container section__footer">
+    <div class="footer__image">
+      <img src="assets/logo-white.png" alt="footer">
+    </div>
+    <div class="footer__content">
+      <p>elit. Inventore et ex! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci amet itaque rem aperiam sequi reprehenderit fugiat quos voluptate nisi modi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus, asperiores.</p>
+      <div>
+        <ul class="footer__links">
+          <li><i class="ri-map-pin-2-fill"></i>
+            Trabzon Maras 61000
+           </li>
+          <li><i class="ri-mail-fill"></i>
+            info@burger.com
+          </li>
+        </ul>
+        <div class="footer__social">
+          <a href=""><i class="ri-instagram-line"></i></a>
+          <a href=""><i class="ri-facebook-box-line"></i></a>
+          <a href=""><i class="ri-twitter-x-fill"></i></a>
+          <a href=""><i class="ri-telegram-line"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="footer__bar">
+      © 2024 All Rights Resereved
+    </div>
+  </div>
+</footer>
+
+
+
     <script src="script.js"></script>
   </body>
 </html>
